# ESFS

./: .gitignore  .pybiomart.sqlite  CHANGELOG.md  CITATION.cff  Pipfile  README.md  diagnose_cuda_cpu_switch.py  environment.yml  nemo_env.yaml  pyproject.toml  requirements.txt  setup.cfg  setup.py  test_ep_formula_debug.py  test_es_ccf_backends.py  test_es_ccf_debug.py  test_es_ccf_large_mlx.py  test_es_ccf_large_subset.py  test_es_ccf_mlx_kernel.py  test_es_ccf_precision.py  test_original_vs_updated.py
Claude_Dev_Folder/: Claude_Test_Workflow.ipynb
ESFS/: ESFS.py  __init__.py  backend.py  plotting.py  pyproject.toml  requirements.txt
ESFS/src/esfs/: esfs.py
ESFS/src/esfs.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
ESFW.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
Example_Workflows/: README.md
Example_Workflows/Gut_Spatial_Transcriptomics_Example/: Spatial_Gut_Workflow.ipynb
Example_Workflows/Neural_Tube_Example/: Delile2019_Workflow.ipynb
esfs.egg-info/: PKG-INFO  SOURCES.txt
src/ESFS/: ESFS.py  backend.py  plotting.py  profile_output.txt
src/esfs/: ESFS.py  __init__.py  backend.py  backend_mlx.py  plotting.py  small_output.txt
temp_esfs/: README.md
temp_esfs/src/esfs/: __init__.py
tests/: benchmark_core_scaling.py  test_numba_ess.py
