[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "esfs"
version = "0.1.0"
description = "Entropy Sorting Feature Selection (ESFS) for scalable correlation and combinatorial marker discovery."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

authors = [
  { name = "Your Name", email = "you@example.com" }
]

dependencies = [
    "numpy",
    "scipy",
    "pandas",
    "matplotlib",
    "anndata",
    "multiprocess",
    "p_tqdm",
    "scikit_learn",
    "umap_learn"
]


[project.urls]
Homepage = "https://github.com/aradley/ESFS"
